--- a/ReactForBeginner/index.html
+++ b/ReactForBeginner/index.html
@@ -8,41 +8,40 @@
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
     const root = document.getElementById("root");
-    const Title = () => {
-      return (
-        <h3
-          id="title"
-          onMouseEnter={() => {
-            console.log("mouse enter");
-          }}
-        >
-          Hello I'm a title
-        </h3>
-      );
-    };
-    const Button = () => {
-      return (
-        <button
-          style={{
-            backgroundColor: "tomato",
-          }}
-          onClick={() => {
-            console.log("im clicked");
-          }}
-        >
-          Click me
-        </button>
-      );
-    };
-
-    const Container = () => {
+    const App = () => {
+      const [minutes, setMinutes] = React.useState(0);
+      const [flipped, setFlipped] = React.useState(false);
+      const onChange = (event) => {
+        setMinutes((notUsed) => event.target.value);
+      };
+      const onFlip = () => {
+        setFlipped((current) => !current);
+      };
       return (
         <div>
-          <Title />
-          <Button />
+          <h1>Super Converter</h1>
+          <label for="minutes">Minutes</label>
+          <input
+            placeholder="Minutes"
+            type="number"
+            id="minutes"
+            value={minutes}
+            onChange={onChange}
+            disabled={flipped}
+          />
+          <label for="hours">Hours</label>
+          <input
+            placeholder="Hours"
+            type="number"
+            id="hours"
+            value={minutes / 60}
+            onChange={onChange}
+            disabled={!flipped}
+          />
+          <button onClick={onFlip}>Flip</button>
         </div>
       );
     };
-    ReactDOM.render(<Container />, root);
+    ReactDOM.render(<App />, root);
   </script>
 </html>
