--- a/VanillaJS/index.html
+++ b/VanillaJS/index.html
@@ -14,7 +14,7 @@
         maxlength="15"
         required
       />
-      <input type="submit" value="Log In" />
+      <input type="submit" value="Log In" class="submit-form" />
     </form>
     <h2 id="clock"></h2>
     <h1 id="greeting" class="hidden"></h1>
